// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSwitch should disable theming if the required attribute is omitted 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(0, 178, 214)"
  trackColorForFalse="rgb(230, 228, 235)"
  trackColorForTrue="rgba(0, 178, 214, 0.32)"
  trackTintColor="rgba(0, 178, 214, 0.32)"
/>
`;

exports[`Android BpkSwitch should render correctly 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(243, 242, 245)"
  trackColorForFalse="rgb(230, 228, 235)"
  trackColorForTrue="rgba(0, 178, 214, 0.32)"
  trackTintColor="rgb(230, 228, 235)"
/>
`;

exports[`Android BpkSwitch should support the "value" prop 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(0, 178, 214)"
  trackColorForFalse="rgb(230, 228, 235)"
  trackColorForTrue="rgba(0, 178, 214, 0.32)"
  trackTintColor="rgba(0, 178, 214, 0.32)"
/>
`;

exports[`Android BpkSwitch should support theming 1`] = `
<AndroidSwitch
  accessibilityRole="button"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="red"
  trackColorForFalse="rgb(230, 228, 235)"
  trackColorForTrue="rgba(255, 0, 0, 0.32)"
  trackTintColor="rgba(255, 0, 0, 0.32)"
/>
`;
